--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     env_file:
       - .env
     volumes:
-      - sqlite-data:/mrgorlomi:rw
+      - sqlite-data:/mrgorlomi/data:rw
       - ./participants.csv:/mrgorlomi/participants.csv
 
     command: ["python", "slackbot.py"]
